tests/local_fn_capture_param_bad.hop
fn main(x int) {
	fn get() int {
		return x
	}
	_ = get
}
